Bug 407512 - Quick Open "Match Mode: Filepath" option does not work
Summary: Quick Open "Match Mode: Filepath" option does not work
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 19.04.1
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-14 07:18 UTC by T.J. L
Modified: 2019-10-06 09:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description T.J. L 2019-05-14 07:18:55 UTC
SUMMARY
https://phabricator.kde.org/D19480 added a new option to choose whether quick open matches only on filename or on the entire path. However, even when set to "filepath," it is only matching on file names.

STEPS TO REPRODUCE
1. Set up a simple project, e.g.

```
mkdir test-project
cd test-project
echo '{"name": "test", "files": [ { "directory": ".", "filter": ["*.txt"] } ]}' > .kateproject
mkdir more
for i in {1..10}; do echo $i > $i.txt; echo $i > more/$i.txt; done
kate 1.txt
```

2. In kate, verify that the "Match Mode" setting is set to "Filepath"
3. Activate Quick Open
4. See that all the text files created above are present.
5. Type "more/" into "Quick Open Search" box.

OBSERVED RESULT

No results are returned; all files get filtered out.

EXPECTED RESULT

The text files placed in the "more" directory" are shown, since their filepath contains the input string "more/"

SOFTWARE/OS VERSIONS
Linux: Slackware 14.2+ (-current)
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.3
Comment 1 Christoph Cullmann 2019-05-22 14:35:44 UTC
Git commit 4fbe4073bb05c0e22f10c5d4d39390a1f80f60eb by Christoph Cullmann.
Committed on 22/05/2019 at 14:35.
Pushed by cullmann into branch 'master'.

Fix quick open mode selection

Summary:
Me being an idiot and all forgot to change the quick open model when configuration dialog changes the mode (sigh).

So fixing that. Testing manually it seems that now it behaves as expected.

Thanks for being so patient.

Reviewers: cullmann

Reviewed By: cullmann

Subscribers: kwrite-devel

Tags: #kate

Differential Revision: https://phabricator.kde.org/D21294

M  +12   -2    kate/katequickopen.cpp
M  +2    -9    kate/katequickopen.h

https://commits.kde.org/kate/4fbe4073bb05c0e22f10c5d4d39390a1f80f60eb
Comment 2 Gregor Mi 2019-10-06 09:13:01 UTC
Is this already landed in Kate 19.04.3? There, it does not work for me yet.
Comment 3 Dominik Haumann 2019-10-06 09:19:49 UTC
It was committed end of May, and likely not backported due to string changes.