Fix quick open mode selection

Summary:
Me being an idiot and all forgot to change the quick open model when configuration dialog changes the mode (sigh).

So fixing that. Testing manually it seems that now it behaves as expected.

Thanks for being so patient.

BUG: 407512

Reviewers: cullmann

Reviewed By: cullmann

Subscribers: kwrite-devel

Tags: #kate

Differential Revision: https://phabricator.kde.org/D21294