kate/katequickopen.h
@@ -42,13 +42,8 @@ public:
      */
     void update();
 
-    void setMatchMode(int mode) {
-        m_matchMode = mode;
-    }
-
-    int matchMode() {
-        return m_matchMode;
-    }
+    int matchMode();
+    void setMatchMode(int mode);
 
 protected:
     bool eventFilter(QObject *obj, QEvent *event) override;
@@ -76,8 +71,6 @@ private:
      * filtered model we search in
      */
     QSortFilterProxyModel *m_model;
-
-    int m_matchMode;
 };
 
 #endif
